<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">糗事百科</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="one_profile_center">个人中心</string>
    <string name="switch_theme">切换主题</string>
    <string name="settings">设置</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="title_about">关于糗百</string>
    <string name="title_feedback">意见反馈</string>
    <string name="description_user_avatar">用戶頭像</string>
    <string name="description_listview_top_shadow">列表顶部的阴影条</string>
    <string name="new_list">有新糗事，点击查看</string>
    <string name="points_and_count">%1$s 好笑 · %2$s 评论</string>

</resources>
